2005-09-08  Jan Schmidt  <thaytan@mad.scientist.com>

	* sys/ximage/ximagesink.c: (gst_ximage_buffer_init),
	(gst_ximagesink_check_xshm_calls), (gst_ximagesink_xcontext_get):
	* sys/xvimage/xvimagesink.c: (gst_xvimage_buffer_init),
	(gst_xvimagesink_check_xshm_calls):
	  Fix compilation when XShm is not available.

2005-09-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/libvisual/visual.c: (gst_visual_dispose),
	(gst_visual_getcaps), (gst_visual_src_setcaps),
	(gst_visual_sink_setcaps), (get_buffer), (gst_visual_chain),
	(gst_visual_change_state):
	  Finish fixing up libvisual plugin so that it runs. 

2005-09-07  Stefan Kost  <ensonic@users.sf.net>

	* ext/vorbis/vorbisenc.c:
	* gst-libs/gst/tag/gstvorbistag.c:
	  gsttaginterface.h -> gsttagsetter.h

2005-09-07  Stefan Kost  <ensonic@users.sf.net>

	* check/pipelines/simple_launch_lines.c: (GST_START_TEST):
	  added another test that failes for me (test is not active by default)

2005-09-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	  v4l2 is no longer in gst-plugins-base

2005-09-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* configure.ac:
	  In the output at the end, don't show the first plugin on the same
	  line as "Core plug-ins, always built:".
	  Indent the output as for other plugin categories
	* gst/videotestsrc/gstvideotestsrc.c: (gst_videotestsrc_create):
	  #define that can be used to not use peer buffer_alloc functions for
	  test purposes.
	* sys/ximage/ximagesink.c: (gst_ximage_buffer_init),
	(gst_ximage_buffer_get_type), (gst_ximagesink_ximage_new),
	(gst_ximagesink_show_frame):
	* sys/xvimage/xvimagesink.c: (gst_xvimage_buffer_init),
	(gst_xvimage_buffer_get_type), (gst_xvimagesink_setcaps),
	(gst_xvimagesink_show_frame):
	  Error case handling fixes. gst-launch fakesrc ! x[v]imagesink now
	  fails gracefully instead of XError aborting or deadlocking.

2005-09-07  Stefan Kost  <ensonic@users.sf.net>

	* ext/libvisual/Makefile.am: