@@ -1,3 +1,12 @@
+2005-09-09  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst-libs/gst/audio/gstbaseaudiosink.c:
+	(gst_base_audio_sink_render):
+	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_commit):
+	* gst/volume/gstvolume.c: (gst_volume_class_init),
+	(volume_transform):
+          fixing lost sync, some more debugging
+
 2005-09-08  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* sys/ximage/ximagesink.c: (gst_ximage_buffer_init),
